Добавленно зацикливание для обхода игроков, добавлен метод для определения, есть ли карты у игрока, добавлен метод для определения разыгравыемых карт, добавлен метод для вывод количества брошенных карт игроком